fixed previous console error, incorporated overflow in table design, troubleshooting filter using name only

--- a/css/pokemon-filter.css
+++ b/css/pokemon-filter.css
@@ -12,6 +12,7 @@ section#filter {
 input {
     margin: 2px;
     height: 2em;
+    font-size: 18px;
 }
 
 /* #button-div {
