--- a/css/pokemon-table.css
+++ b/css/pokemon-table.css
@@ -1,17 +1,18 @@
 
 section#results {
-    /* background-color: purple; */
     display: flex;
     order: 2;
     flex-direction: column;
     flex-flow: row wrap;
+    width: 100%;
+    height: 275px;
+    overflow: auto;
 }
 
 #results-table {
-    /* background-color: lightcoral; */
-    width: 100%;
-    border-collapse: collapse;
+    width: 90%;
     text-align: center;
+    border-collapse: inherit;
 }
 
 thead {
@@ -21,8 +22,7 @@ thead {
 
 
 td {
-    /* background-color: aqua; */
-    height: 2px;
+    background-color: yellowgreen;
     color: purple;
 }
 
@@ -34,10 +34,9 @@ tr:nth-child(odd) {
     background-color: yellow;
 } */
 
-.column-headings {
+/* .column-headings {
     height: 2em;
-    background-color: transparent;
-}
+} */
 
 img {
     width: 40px;
